# detokenizer

./: .gitignore  README.md  bpe_100m_attack.py  download_fineweb_100m.py  evaluate_candidate_topk.py  evaluate_tokenizer_zoo.py  prepare.py  program.md  pyproject.toml  recover_text.py  results.tsv  tokenizer_registry.py  train.py
plots/: improvement_over_time.md
scripts/: update_plot.js
tokenizer_types/: base.py  deepseek.py  gemma.py  hf_tokenizer.py  kimi.py  openai_tiktoken.py  qwen.py  trained_bpe.py
