[project]
name = "autoresearch-detokenizer"
version = "0.1.0"
description = "Autonomous hillclimbing harness for shuffled-token detokenization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hf-transfer>=0.1.9",
    "huggingface-hub>=0.36.0",
    "numpy>=2.4.0",
    "pyarrow>=21.0.0",
    "rapidfuzz>=3.14.0",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.0",
    # Keep below CUDA-13 wheels because the remote H100/H200 pod currently has
    # a CUDA 12.4-era NVIDIA driver.
    "torch>=2.0.0,<2.7",
    "transformers>=4.57.0",
]

[tool.uv]
package = false
